--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,24 @@
+[project]
+name = "mmray"
+version = "0.1.1"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "ray[default]>=2.38.0",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[project]
-name = "mmray"
-version = "0.0.1"
-authors = [
-  { name="Xinqiang Ding", email="Xinqiang.Ding@tufts.edu" }
-]
-description = "MMRay"
-readme = "README.md"
-license = { file="LICENSE" }
-requires-python = ">=3.11"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
-
-dependencies = [
-]
-
-[project.urls]
-"Homepage" = "https://github.com/DingGroup/MMRay"
-"Bug Tracker" = "https://github.com/DingGroup/MMRay/issues"
-
-[tool.hatch.build]
-exclude = [
+[dependency-groups]
+dev = [
+    "bayesmbar>=0.0.6",
+    "ipython>=9.0.1",
+    "matplotlib>=3.10.1",
+    "mdtraj>=1.10.3",
 ]
 
 [project.scripts]
-sray = "mmray.generate_slurm_script_to_start_ray:main"
+mmray_generate_slurm_script = "mmray:generate_slurm_script"
